--- a/serverless.yml
+++ b/serverless.yml
@@ -114,3 +114,7 @@ functions:
 resources:
   # DynamoDB
   - ${file(resources/dynamodb-table.yml)}
+  # S3
+  - ${file(resources/s3-bucket.yml)}
+  # Cognito
+  - ${file(resources/cognito-user-pool.yml)}
